objects/SVMXC__SM_Service_Board__e.object
<CustomObject>
    <description>This platform event is used to send data in real time to Service Board.</description>
    <fields>
        <fullName>SVMXC__SM_Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field if true, indicates that the payload size is more.</description>
        <label>Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Event_Type__c</fullName>
        <description>This indicates the type of event (create, update or delete).</description>
        <label>Event Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Object_Name__c</fullName>
        <description>This has the name of the object for which the payload is being sent.</description>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Payload__c</fullName>
        <description>This field has the payload of the record which is sent to Service Board.</description>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Board</label>
    <pluralLabel>Service Board</pluralLabel>
</CustomObject>